src2/objects/Case_Event_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account_Channel__c</fullName>
        <label>Account Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Horeca_Segment__c</fullName>
        <label>Account Horeca Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Horeca_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_to_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to Queue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>equals</operation>
                <value>CASE_EVENT_QUEUE</value>
            </filterItems>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LST_OF_VAL__c</referenceTo>
        <relationshipLabel>Case Event Matrix (Queue)</relationshipLabel>
        <relationshipName>Case_Event_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Event_Matrix_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_Domain_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Domain Value</label>
        <referenceTo>Attribute_Domain__c</referenceTo>
        <relationshipLabel>Case Event Matrix</relationshipLabel>
        <relationshipName>Case_Event_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute_Definition__c.Data_Type__c</field>
                <operation>equals</operation>
                <value>Attribute Domain</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute_Definition__c</referenceTo>
        <relationshipLabel>Case Event Matrix</relationshipLabel>
        <relationshipName>Case_Event_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Complete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Cancellation_Request__c</fullName>
        <label>Case Cancellation Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Case Event Matrix Entitlement</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Event_Matrix_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Case Event Matrix UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Event_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Case Event UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Origin_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Qualification__c</fullName>
        <label>Case Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_CaseQualification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Reason</label>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Case Event Matrix Reason</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Reason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Reopened__c</fullName>
        <label>Case Reopened</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cause Qualification</label>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Case Event Matrix Cause</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Cause</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Template Id</label>
        <referenceTo>LST_OF_VAL__c</referenceTo>
        <relationshipLabel>Case Event Matrix (Email Template Id)</relationshipLabel>
        <relationshipName>Case_Event_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <label>Escalated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execute_Next__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute Next</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Followup_Event_Number__c</fullName>
        <label>Follow-up Event Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>equals</operation>
                <value>CASE_EVENT_MILESTONE</value>
            </filterItems>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LST_OF_VAL__c</referenceTo>
        <relationshipLabel>Case Event Matrix (Milestone Name)</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Milestone_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Case Event Matrix Procedure</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Procedure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Case Event Matrix Step</relationshipLabel>
        <relationshipName>Case_Event_Matrix_Step</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>01.30</fullName>
                    <label>Complete All Milestones</label>
                </value>
                <value>
                    <fullName>01.10</fullName>
                    <label>Entitlement</label>
                </value>
                <value>
                    <fullName>00</fullName>
                    <label>No Subtype</label>
                </value>
                <value>
                    <fullName>01.20</fullName>
                    <label>Pause All Milestones</label>
                </value>
                <value>
                    <fullName>01.40</fullName>
                    <label>SLA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Milestone</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Follow-up</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Assignment</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Suggested Resolution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Event Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Cancellation_Request__c</columns>
        <columns>Escalated__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Type__c</columns>
        <columns>Sequence__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Active__c</columns>
        <columns>Assignment_Type__c</columns>
        <columns>Assign_to_User__c</columns>
        <columns>Assign_to_Queue__c</columns>
        <columns>Case_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </filters>
        <filters>
            <field>Step__c</field>
            <operation>contains</operation>
            <value>wait</value>
        </filters>
        <label>All Assignment</label>
    </listViews>
    <listViews>
        <fullName>All_Follow_up</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Active__c</columns>
        <columns>Execute_Next__c</columns>
        <columns>Followup_Event_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Event_Matrix__c.Follow_up</value>
        </filters>
        <label>All Follow-up</label>
    </listViews>
    <listViews>
        <fullName>All_Milestone</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Case_Entitlement__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Milestone_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Active__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <label>All Milestone</label>
    </listViews>
    <listViews>
        <fullName>All_Suggested_Resolutions</fullName>
        <columns>NAME</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Cause_Qualification__c</columns>
        <columns>Account_Channel__c</columns>
        <columns>Procedure__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>Execute_Next__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Event_Matrix__c.Suggested_Resolution</value>
        </filters>
        <label>All Suggested Resolutions</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Follow_up2</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Attribute_Domain_Value__c</columns>
        <columns>Active__c</columns>
        <columns>Execute_Next__c</columns>
        <columns>Followup_Event_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Event_Matrix__c.Follow_up</value>
        </filters>
        <label>Copy of All Follow-up</label>
    </listViews>
    <listViews>
        <fullName>FUP_ASSV_Machine_Pick_Up</fullName>
        <columns>NAME</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Domain_Value__c</columns>
        <columns>Sequence__c</columns>
        <columns>Execute_Next__c</columns>
        <columns>Followup_Event_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Event_Matrix__c.Follow_up</value>
        </filters>
        <filters>
            <field>Procedure__c</field>
            <operation>contains</operation>
            <value>Machine Pick-Up</value>
        </filters>
        <label>FUP - ASSV Machine Pick-Up</label>
    </listViews>
    <listViews>
        <fullName>FUP_ASSV_Removable_Parts_Required</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Procedure__c</columns>
        <columns>Step__c</columns>
        <columns>Active__c</columns>
        <columns>Execute_Next__c</columns>
        <columns>Followup_Event_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Event_Matrix__c.Follow_up</value>
        </filters>
        <filters>
            <field>Procedure__c</field>
            <operation>contains</operation>
            <value>Removable Parts Required</value>
        </filters>
        <label>FUP - ASSV Removable Parts Required</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Event Matrix</pluralLabel>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <label>Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Follow_up</fullName>
        <active>true</active>
        <label>Follow-up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone</fullName>
        <active>true</active>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggested_Resolution</fullName>
        <active>true</active>
        <label>Suggested Resolution</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Assign_Queue_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Assignment_Type__c)= &apos;Queue&apos;,ISBLANK(Assign_to_Queue__c))</errorConditionFormula>
        <errorDisplayField>Assign_to_Queue__c</errorDisplayField>
        <errorMessage>Missing Value in AssignToQueueFiled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assign_User_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Assignment_Type__c)= &apos;User&apos;,ISBLANK(Assign_to_User__c))</errorConditionFormula>
        <errorDisplayField>Assign_to_User__c</errorDisplayField>
        <errorMessage>Missing Value in AssignToUser Filed</errorMessage>
    </validationRules>
</CustomObject>